--- a/user.html
+++ b/user.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>User — GSAZSSM</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body style="background:#0f0f0f;color:#fff;display:flex;align-items:center;justify-content:center;min-height:100vh;">
   <div style="text-align:center;max-width:800px;padding:2rem;">
